hubSide/force-app/main/default/objects/AssociatedCost__c/AssociatedCost__c.object-meta.xml
<CustomObject>
    <description>This object allows to link a cost to the damaged equipment.</description>
    <label>Coût Associé</label>
    <nameField>
        <label>Objet Associé</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coûts Associés</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>