hubSide/force-app/main/default/objects/AssociatedCost__c/fields/DamagedEquipment__c.field-meta.xml
<CustomField>
    <fullName>DamagedEquipment__c</fullName>
    <label>Equipement Sinistré</label>
    <referenceTo>Equipement_sinistre__c</referenceTo>
    <relationshipLabel>Coûts Associés</relationshipLabel>
    <relationshipName>AssociatedCosts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>