hubSide/force-app/main/default/objects/AssociatedCost__c/fields/EquipmentCostType__c.field-meta.xml
<CustomField>
    <fullName>EquipmentCostType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Type de coût équipement</label>
    <referenceTo>EquipmentCostType__c</referenceTo>
    <relationshipLabel>Coûts Associés</relationshipLabel>
    <relationshipName>Couts_Associes</relationshipName>
    <type>Lookup</type>
</CustomField>