hubSide/force-app/main/default/objects/AssociatedCost__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Objet</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Object</valueSetName>
    </valueSet>
</CustomField>