hubSide/force-app/main/default/objects/AssociatedCost__c/validationRules/UserCantChangeAssociatedCost.validationRule-meta.xml
<ValidationRule>
    <fullName>UserCantChangeAssociatedCost</fullName>
    <active>true</active>
    <description>Le coût unitaire et la main d&apos;oeuvre ne sont modifiables que lorsque permis au niveau du type de coût d&apos;équipement - The unit and manpower costs are only editable</description>
    <errorConditionFormula>AND(
    OR(
        ISCHANGED(UnitCost__c), 
        ISCHANGED(ManpowerCost__c)
    ), 
    EquipmentCostType__r.ChangeableCost__c == FALSE
)</errorConditionFormula>
    <errorMessage>Les modifications de coût ne sont pas autorisées - You&apos;re not allowed to edit this associated cost.</errorMessage>
</ValidationRule>